# azure_devops_kit

./: README.md  ai_instructions.md  pyproject.toml
src/azure_devops_kit/: __init__.py  cli.py  test_case_manager.py
tests/: test_test_case_manager.py
